--- a/.github/workflows/local_pika-trading-app.yml
+++ b/.github/workflows/local_pika-trading-app.yml
@@ -1,41 +1,47 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - pika-trading-app
+name: Build and deploy Node.js + Angular app to Azure Web App - pika-trading-app
 
 on:
   push:
     branches:
-      - Local
+      - main  # Ajusta si tu rama principal se llama diferente
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: Install backend dependencies
+        run: npm install
+
+      - name: Build Angular frontend
         run: |
+          cd pika-trading-frontend
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build -- --configuration production
+          cd ..
+
+      - name: Move frontend build to backend
+        run: |
+          mkdir -p dist/pika-trading-frontend/browser
+          cp -r pika-trading-frontend/dist/pika-trading-frontend/browser/* dist/pika-trading-frontend/browser/
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip server.js package.json package-lock.json dist/ data/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: node-angular-app
           path: release.zip
 
   deploy:
@@ -45,30 +51,29 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: node-angular-app
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2E0C9918736D472CBCAE927331AB7B17 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_095698D8607F4C6696A21120514C2CBC }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F68EC249661B44BCBB1DFFDFFAEAA8EB }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F885B893B2294667A7F7F7736151E97A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CD426CC5F610471F8DCA0BC46AFABAE4 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_AAD76A6331AD488FAF52073FF0889BEC }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'pika-trading-app'
           slot-name: 'Production'
           package: .
-          
