--- a/.github/workflows/main_pika-trading.yml
+++ b/.github/workflows/main_pika-trading.yml
@@ -24,6 +24,11 @@ jobs:
         run: |
           cd pika-trading-backend
           npm install
+          
+      - name: Install express in backend
+        run: |
+          cd pika-trading-backend
+          npm install express
 
       - name: Install frontend dependencies
         run: |
