--- a/.github/workflows/main_pika-trading.yml
+++ b/.github/workflows/main_pika-trading.yml
@@ -24,11 +24,6 @@ jobs:
         run: |
           cd pika-trading-backend
           npm install
-          
-      - name: Install express in backend
-        run: |
-          cd pika-trading-backend
-          npm install express
 
       - name: Install frontend dependencies
         run: |
@@ -54,7 +49,7 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           cd pika-trading-backend
-          zip -r release.zip server.js package.json package-lock.json dist/ data/
+          zip -r release.zip server.js package.json package-lock.json node_modules/ dist/ data/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
