intentando agregar base de datos junto al docker

--- a/pika-trading-backend/.env
+++ b/pika-trading-backend/.env
@@ -1,2 +1,5 @@
 PORT=3000
 SECRET_KEY=Juañ18*
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/pikatrading"
+# This was inserted by `prisma init`:
+[object Promise]
